--- a/react_intro/task_2/dashboard/src/Notifications.css
+++ b/react_intro/task_2/dashboard/src/Notifications.css
@@ -2,8 +2,21 @@
   border: 2px dashed #e0354b;
   padding: 20px;
   margin: 10px;
+  position: relative;
 }
 
 .Notifications p {
-  margin: 0;
+  margin: 0 0 10px 0;
+}
+
+.Notifications ul {
+  padding-left: 40px;
+}
+
+.Notifications li[data-priority="default"] {
+  color: blue;
+}
+
+.Notifications li[data-priority="urgent"] {
+  color: red;
 }
